<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <!-- Main Layout for choosing a game -->
    <LinearLayout
        android:id="@+id/game_changer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/padding_margin_16dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="@dimen/padding_margin_16dp"
            android:text="@string/choose_the_game"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:visibility="gone"/>


        <Button
            android:id="@+id/button_basketball_score"
            style="@style/GameChangerButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/basketball_white"
            android:drawableStart="@mipmap/basketball_white"
            android:onClick="onButtonClicked"
            android:paddingEnd="@dimen/padding_margin_16dp"
            android:paddingStart="@dimen/padding_margin_16dp"
            android:text="@string/basketball_score"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"/>

        <Button
            android:id="@+id/button_football_score"
            style="@style/GameChangerButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/football_white"
            android:drawableStart="@mipmap/football_white"
            android:onClick="onButtonClicked"
            android:paddingEnd="@dimen/padding_margin_16dp"
            android:paddingStart="@dimen/padding_margin_16dp"
            android:text="@string/football_score"/>

        <Button
            android:id="@+id/button_american_football_score"
            style="@style/GameChangerButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/american_football_white"
            android:drawableStart="@mipmap/american_football_white"
            android:onClick="onButtonClicked"
            android:paddingEnd="@dimen/padding_margin_16dp"
            android:paddingStart="@dimen/padding_margin_16dp"
            android:text="@string/american_football_score"/>

        <Button
            android:id="@+id/button_baseball_score"
            style="@style/GameChangerButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/baseball_white"
            android:drawableStart="@mipmap/baseball_white"
            android:onClick="onButtonClicked"
            android:paddingEnd="@dimen/padding_margin_16dp"
            android:paddingStart="@dimen/padding_margin_16dp"
            android:text="@string/baseball_score"/>

    </LinearLayout>

    <!-- Basketball -->
    <include layout="@layout/basketball_layout"/>

    <!-- Football -->
    <include layout="@layout/football_layout"/>

    <!-- Baseball -->
    <include layout="@layout/baseball_layout"/>

    <!-- American Football -->
    <include layout="@layout/american_football_layout"/>


</RelativeLayout>
