<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/baseball_score"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <!-- Baseball -->

    <TextView
        android:id="@+id/game_type_baseball"
        style="@style/GameTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@mipmap/baseball"
        android:drawableStart="@mipmap/baseball"
        android:gravity="center"
        android:text="@string/baseball"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_type_baseball"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_margin_24dp"
            android:paddingRight="@dimen/padding_margin_24dp">

            <TextView
                style="@style/ScoreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/team_a"/>

            <TextView
                android:id="@+id/team_a_score_baseball"
                style="@style/TeamScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>

            <Button
                android:id="@+id/run_a_baseball"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addRunTeamA"
                android:text="@string/run"/>


            <TextView
                android:id="@+id/out_a_baseball"
                style="@style/TeamScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>

            <Button
                android:id="@+id/add_out_a_baseball"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_8dp"
                android:onClick="addOutTeamA"
                android:text="@string/out"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_margin_24dp"
            android:paddingRight="@dimen/padding_margin_24dp">

            <TextView
                style="@style/ScoreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/team_b"/>

            <TextView
                android:id="@+id/team_b_score_baseball"
                style="@style/TeamScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>

            <Button
                android:id="@+id/run_b_baseball"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addRunTeamB"
                android:text="@string/run"/>


            <TextView
                android:id="@+id/out_b_baseball"
                style="@style/TeamScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>

            <Button
                android:id="@+id/add_out_b_baseball"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_8dp"
                android:onClick="addOutTeamB"
                android:text="@string/out"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_baseball"
        style="@style/ResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="resetScore"/>

    <Button
        style="@style/GameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="changeGame"/>
</RelativeLayout>